site plan update

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE html>!
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Wetpaddle | Home</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&family=Roboto+Slab:wght@300&family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
@@ -51,7 +55,8 @@
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
+                    It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                 <a class='join' href="rivers.html">Join Us</a>
                 </section>
         </main>
