--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,7 +12,7 @@
   <header>
     <h1>[Wet Paddle] Site Plan</h1>
     <h2>[Anana Ezikpe]</h2>
-    <h2>WDD 130-[01]</h2>
+    <h2>WDD 130-[B3]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -126,7 +126,9 @@
 
     <h3>[Page 2]</h3>
 
+    <img src="images/page2wireframe.PNG" alt="page 2 wireframe"/>
     <!-- <img src="#" alt="page 2 wireframe"> -->
+
   </main>
 </body>
 
