--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -94,8 +94,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About Me</a>
+        <a href="#">Blog Page</a>
       </nav>
       <hr>
       <h2>
@@ -106,10 +106,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [About Me] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [Blog Page]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -131,29 +131,96 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [INTRODUCTION:<br>
+        I am Anana Agwu Ezikpe, a multi-faceted individual with a deep<br> passion for knowledge, creatiity, 
+        and community. I'm a name<br> that intertwines my Nigerian heritage, symbolizing the sweetness <br>and uniqueness 
+        of my character. With a background in agronomy,<br> I've always been drawn to the marvels of innovation and
+        problem-solving. <br>My journey in this field has equipped me with a strong analytical mindset <br>and a penchant for 
+        tackling complex challenges head-on. <br>
+        I'm also a dedicated advocate for community development and empowerment. <br>My experiences in grassroots initiatives 
+        have allowed me <br>to witnessthe profound impact of collective action in transforming <br>lives. 
+        In this nattative of my life, I continually strive to blend <br>mytechnical acumen with my community spirit, seeking 
+        to <br>create a world that balances innovation, culture, and compassion. <br>Join me as we embark on this journey of exploration 
+        growth, and making the world <br>a little sweeter one step at a time. 
+
+      </p>
+      <P>[WEBSITE CONCEPT/PURPOSE:<br>
+        This site serves as an all-encompassing digital gateway to my professional world. <br>With a primary goal of showcasing my portfolio, 
+        skills, and achievements, <br>it stands as a meticulously crafted platform where visitors can explore<br> the essence of my professional journey. 
+        This site is more than a mere online <br>presence; it’s a visual and informational testament to my expertise, <br>artistry, and dedication. 
+        For potential employers, it provides a window <br>into my capabilities and the value I can bring to their endeavors. <br>Likewise, clients can 
+        readily peruse my work and gauge its alignment<br> with their vision. Beyond that, it caters to anyone intrigued by my <br>contributions and creative pursuits. 
+        By presenting myself effectively on this website, <br>I aim to create a lasting impression, leaving no doubt about my competence and passion. <br>
+        It’s not just a digital resume; it’s a living portfolio that encapsulates the essence <br>of who I am and what I can achieve. Welcome to my 
+        virtual world of accomplishments and aspirations.]  
+ 
+      </P>
+      <p>[AUDIENCE ENGAGEMENT:<br>
+        My website's audience is diverse, encompassing potential employers, discerning clients, <br>and prospective business partners seeking a glimpse into my professional prowess.<br>
+        I recognize the importance of tailoring my content to meet their specific needs <br>and expectations. For potential employers, the site serves as a testament <br>to my skills 
+        and achievements. Clients find a showcase of work that aligns with <br>their aspirations. Business partners discover a collaborative spirit. Simultaneously, <br>I engage the 
+        general public by sharing insights, knowledge, and creative endeavors. <br>Through informative and relevant content, I aim to captivate, educate, and inspire, fostering <br>
+        connections with a wide-ranging audience and establishing my digital presence as a valuable resource.]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/logoimage.PNG" alt="image for homepage">
+        <img src="images/fabianimage.jpg" alt="logo-icon">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[About Me]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [CONTENT CATEGORIES:
+        This page covers a wide range of content categories, from my 'family background, <br>
+        educational background, skills obtained, to working experience.']
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p> [FAMILY BACKGROUND:
+        I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
+        boys and a girl (my parent included).]
+      </p>
+      <p> [EDUCATIONAL BACKGROUND
+        I am currently studying 'Web and Computer Programming' from BYU-Idoho. My first degree <br>
+        was from the University of Calabar, Nigeria, where I studied 'Agronomy.' <br>
+        I did my High School in Cross River State, Nigeria from the year 2003 - 2009 in <br>
+        Eng-Huat International Secondary School, Uyanga, Nigeria, where I obtained my Senior Secondary School <br>
+        School Certificate.]
+      </p>
+      <p> [SKILLS OBTAINED:
+        I am an efficient typist who can type lots of documents at a very fast pace. Also, I am <br>
+        a very good forklift operator with a certificate and trade test in forklift operation.]
+      </p>
+      <p> [WORK EXPERIENCE:
+        As an Agronomist, I have worked in 'Obia farm' as a farm supervisor, from 2018 - 2021. Also <br>
+        while participating in my 'National Youth Service Corp (NYSC),' I taught 'Agriculture for a period of one year <br>
+        (from 2017 - 2018) in a secondary school.']
+
+      </p>
+      <p>Images for About Me</p>
+        <img src="images/logoimage.PNG" alt="logo-icon">
+        <img src="images/fabianimage3.jpg" alt="fabianimage">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[Blog Page]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This page contains my Hobbies/interest and updates on my activities and future events
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>
+        [HOBBIES:
+        As favorite past time activities, I like reading, exercising and gaming.]
+      </p>
+      <p>[READING:
+        Adventure, legal, and special ops novels are my favorite]
+      </p>
+      <p>[EXERCISES:
+        Aerobics, push-ups, jogging, dumbells, weight lifting are my favorite exercises.]
+      </p>
+      <p>[VIDEO GAMES:
+        Soccer remains my favorite video games. Also like adventure games like God of war, <br>
+        Ghost of Tsushima, and action games like Call of Duty]
+
+      </p>
+      <p>Images for the Blog Page</p>
+        <img src="images/logoimage.PNG" alt="logo-icon">
+        <img src="images/fabianimage4.jpg" alt="fabianimage">
 
       </ul>
       <hr>
