--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -174,7 +174,7 @@
         educational background, skills obtained, to working experience.']
       </p>
       <p> [FAMILY BACKGROUND:
-        I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
+        My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
         boys and a girl (my parent included).]
       </p>
       <p> [EDUCATIONAL BACKGROUND
@@ -232,21 +232,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [The footer will have a copyright date]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/mysitehomepage.PNG" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [The footer will have a copyright date]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/mysiteaboutmepage.PNG" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [The footer will have a copyright date]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/mysiteblogpage.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
