--- a/mysite/index.html
+++ b/mysite/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anana Agwu Ezikpe </title>
-    <link rel="stylesheet" type="text/css" href="mysitestyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&display=swap">
 </head>
 <body>
@@ -19,14 +18,13 @@
                 <a href="#">Blog Page</a>
             </nav>
         </header>
-        <div id="hero">
-            <h1 class="home-title">Home</h1>
-            <h2 class="home-welcome">Welcome</h2>
-        </div>
+    
         <main class="main-grid">
+            <h1 class="intro-box">INTRODUCTION</h1>
+            <div>
             <img class="main-img" src="images/fabianimage.jpg" alt="my image">
+            </div>
             <section class="intro">
-                <h1 class="intro-box">INTRODUCTION</h1>
                 <h2 class="intro-box">Welcome to "Anana Agwu Ezikpe's" site. <br>This is your gateway to expert insights in <br>the world of Anana Agwu Ezikpe.</h2>
             </section>
             <section class="concept">
@@ -48,9 +46,18 @@
         </main>
         <footer>
             <p>Anana Agwu Ezikpe &copy; 2023</p>
-            <P><a href="https://www.linkedin.com/in/anana-ezikpe-02010591/"></a>
-                <img src="images/linkin.jpg" alt="linkedin-icon">
-            </P>
+            <div class="social"></div>
+                <a href="https://www.linkedin.com/in/anana-ezikpe-02010591/" target="_blank">
+                    <img src="images/linkin.png" alt="linkedin-icon">
+                </a>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">"
+
+                </a>
+            </div>
         </footer>
     </div>
 
