--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -132,8 +132,8 @@
       <h3>Home page</h3>
       <p>
         [INTRODUCTION:<br>
-        I am Anana Agwu Ezikpe, a multi-faceted individual with a deep<br> passion for knowledge, creatiity, 
-        and community. I'm a name<br> that intertwines my Nigerian heritage, symbolizing the sweetness <br>and uniqueness 
+        I am Anana Agwu Ezikpe, a multi-faceted individual with a deep<br> passion for knowledge, creativity, 
+        and commitment. I'm a name<br> that intertwines my Nigerian heritage, symbolizing the sweetness <br>and uniqueness 
         of my character. With a background in agronomy,<br> I've always been drawn to the marvels of innovation and
         problem-solving. <br>My journey in this field has equipped me with a strong analytical mindset <br>and a penchant for 
         tackling complex challenges head-on. <br>
