--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anana Agwu Ezikpe </title>
+    <link rel="stylesheet" type="text/css" href="portstyles/beststyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&display=swap">
 </head>
 <body>
@@ -20,12 +21,13 @@
         </header>
     
         <main class="main-grid">
-            <div>
+            <div id="main-id">
                 <img class="main-img" src="images/fabianimage.jpg" alt="my image">
             </div>
-            <h1 class="intro-box">INTRODUCTION</h1>
+            
             <section class="intro">
-                <h2 class="intro-box">I am Anana Agwu Ezikpe, a multi-faceted individual with a deep<br> passion for knowledge, creativity, 
+                <h1 class="intro-box">INTRODUCTION</h1>
+                <h2 class="intro-bo">I am Anana Agwu Ezikpe, a multi-faceted individual with a deep<br> passion for knowledge, creativity, 
                     and commitment. I'm a name<br> that intertwines my Nigerian heritage, symbolizing the sweetness <br>and uniqueness 
                     of my character. With a background in agronomy,<br> I've always been drawn to the marvels of innovation and
                     problem-solving. <br>My journey in this field has equipped me with a strong analytical mindset <br>and a penchant for 
@@ -37,8 +39,8 @@
                     growth, and making the world <br>a little sweeter one step at a time.</h2>
             </section>
             <section class="concept">
-                <h1 class="concept-box">WEBSITE CONCEPT/PURPOSE</h1>
-                <h2 class="concept-box">This site serves as an all-encompassing digital gateway to my professional world. <br>With a primary goal of showcasing my portfolio, 
+                <h1 class="intro-box">WEBSITE CONCEPT/PURPOSE</h1>
+                <h2 class="concept-bo">This site serves as an all-encompassing digital gateway to my professional world. <br>With a primary goal of showcasing my portfolio, 
                     skills, and achievements, <br>it stands as a meticulously crafted platform where visitors can explore<br> the essence of my professional journey. 
                     This site is more than a mere online <br>presence; it’s a visual and informational testament to my expertise, <br>artistry, and dedication. 
                     For potential employers, it provides a window <br>into my capabilities and the value I can bring to their endeavors. <br>Likewise, clients can 
@@ -49,7 +51,7 @@
                 </h2>
             </section>
             <section class="audience">
-                <h1 class="audience-box">AUDIENCE ENGAGEMENT</h1>
+                <h1 class="intro-box">AUDIENCE ENGAGEMENT</h1>
                 <h2 class="audience-box">My website's audience is diverse, encompassing potential employers, discerning clients, <br>and prospective business partners seeking a glimpse into my professional prowess.<br>
                     I recognize the importance of tailoring my content to meet their specific needs <br>and expectations. For potential employers, the site serves as a testament <br>to my skills 
                     and achievements. Clients find a showcase of work that aligns with <br>their aspirations. Business partners discover a collaborative spirit. Simultaneously, <br>I engage the 
@@ -70,7 +72,7 @@
                     <img src="images/facebook.png" alt="facebook icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">"
+                    <img src="images/twitter.png" alt="twitter icon">
 
                 </a>
             </div>
