--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -28,11 +28,7 @@
                 <img id="hero-img" src="images/new-hero.jpg" alt="People enjoying white water rafting">
             </div>
             <section id="hero-text">
-                <h1 class="page-two">Page 2: Rivers</h1>
-                <h2 class="home-first">Make Memories with Wetpaddle</h2>
-                <div class='button-click'></div>
-                    <a class='book' href="contactus.html">Book Now</a>
-                <h4>This page is to give information about the rivers the company runs. </h4>
+                <h1 class="page-two">Rivers:</h1>
             </section>
         </div>
         <main class="home-play">
@@ -92,7 +88,7 @@
             </section>
         </main>
         <footer>
-            <p>Wetpaddle &copy; 20XX - Anana Agwu Ezikpe</p>
+            <p>Wetpaddle &copy; 2023 - Anana Agwu Ezikpe</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
