--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -62,9 +62,9 @@
         </main>
         <footer>
             <p>Anana Agwu Ezikpe &copy; 2023</p>
-            <p><a href="site-plan.html">Site Plan</a></p> 
+            <p><a href="site-plan.html">Site Plan</a> 
             </p>
-            <div class="social"></div>
+            <div class="social">
                 <a href="https://www.linkedin.com/in/anana-ezikpe-02010591/" target="_blank">
                     <img src="images/linkin.png" alt="linkedin-icon">
                 </a>
