--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&display=swap">
 </head>
 <body>
+    <div id="navbar">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="blog.html">Blog Page</a>
+    </div>
+    <img src="img_avatar.png" alt="Avatar">
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
