--- a/personal-site/aboutme.html
+++ b/personal-site/aboutme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anana Agwu Ezikpe </title>
+    <link rel="stylesheet" type="text/css" href="portstyles/beststyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&display=swap">
 </head>
 <body>
@@ -28,13 +29,13 @@
                 <h2 class="intro-box">This page covers a wide range of content categories, from my 'family background, <br>
                     educational background, skills obtained, to working experience.'</section>
             <section class="concept">
-                <h1 class="family-box">FAMILY BACKGROUND</h1>
+                <h1 class="content-box">FAMILY BACKGROUND</h1>
                 <h2 class="family-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
                     boys and a girl (my parent included). 
                 </h2>
             </section>
             <section class="education">
-                <h1 class="education-box">EDUCATIONAL BACKGROUND</h1>
+                <h1 class="content-box">EDUCATIONAL BACKGROUND</h1>
                 <h2 class="education-box">I am currently studying 'Web and Computer Programming' from BYU-Idoho. My first degree <br>
                     was from the University of Calabar, Nigeria, where I studied 'Agronomy.' <br>
                     I did my High School in Cross River State, Nigeria from the year 2003 - 2009 in <br>
@@ -43,13 +44,13 @@
                 </h2>
             </section>
             <section class="skills">
-                <h1 class="skills-box">SKILLS OBTAINED</h1>
+                <h1 class="content-box">SKILLS OBTAINED</h1>
                 <h2 class="skills-box">I am an efficient typist who can type lots of documents at a very fast pace. Also, I am <br>
                     a very good forklift operator with a certificate and trade test in forklift operation.            
                 </h2>
             </section>
             <section class="skills">
-                <h1 class="skills-box">WORK EXPERIENCE</h1>
+                <h1 class="content-box">WORK EXPERIENCE</h1>
                 <h2 class="skills-box">As an Agronomist, I have worked in 'Obia farm' as a farm supervisor, from 2018 - 2021. Also <br>
                     while participating in my 'National Youth Service Corp (NYSC),' I taught 'Agriculture for a period of one year <br>
                     (from 2017 - 2018) in a secondary school.'            
