--- a/personal-site/aboutme.html
+++ b/personal-site/aboutme.html
@@ -26,21 +26,21 @@
             </div>
             <h1 class="content-box">CONTENT CATEGORIES</h1>
             <section class="intro">
-                <h2 class="intro-box">This page covers a wide range of content categories, from my 'family background, <br>
+                <h2 class="intro-box">This page covers a wide range of content categories, from my 'family background, 
                     educational background, skills obtained, to working experience.'</section>
             <section class="concept">
                 <h1 class="content-box">FAMILY BACKGROUND</h1>
-                <h2 class="family-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
+                <h2 class="family-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. <br>I was born into a family of seven, with four
                     boys and a girl (my parent included). 
                 </h2>
             </section>
             <section class="education">
                 <h1 class="content-box">EDUCATIONAL BACKGROUND</h1>
-                <h2 class="education-box">I am currently studying 'Web and Computer Programming' from BYU-Idoho. My first degree <br>
-                    was from the University of Calabar, Nigeria, where I studied 'Agronomy.' <br>
-                    I did my High School in Cross River State, Nigeria from the year 2003 - 2009 in <br>
-                    Eng-Huat International Secondary School, Uyanga, Nigeria, where I obtained my Senior Secondary School <br>
-                    School Certificate.            
+                <h2 class="education-box">I am currently studying 'Web and Computer Programming' from BYU-Idoho. <br>
+                    My first degree was from the University of Calabar, Nigeria, where I studied 'Agronomy.' <br>
+                    I did my High School in Cross River State, Nigeria from the year 2003 - 2009 <br> in
+                    Eng-Huat International Secondary School, Uyanga, Nigeria, where I obtained my 
+                    <br>Senior Secondary School School Certificate.            
                 </h2>
             </section>
             <section class="skills">
