--- a/personal-site/aboutme.html
+++ b/personal-site/aboutme.html
@@ -24,10 +24,12 @@
             <div>
                 <img class="about-img" src="images/fabianimage3.jpg" alt="my image">
             </div>
-            <h1 class="content-box">CONTENT CATEGORIES</h1>
+            
             <section class="intro">
+                <h1 class="content-box">CONTENT CATEGORIES</h1>
                 <h2 class="intro-box">This page covers a wide range of content categories, from my 'family background, 
-                    educational background, skills obtained, to working experience.'</section>
+                    educational background, skills obtained, to working experience.'</h2>
+            </section>
             <section class="concept">
                 <h1 class="content-box">FAMILY BACKGROUND</h1>
                 <h2 class="family-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. <br>I was born into a family of seven, with four
@@ -60,8 +62,7 @@
         <footer>
             <p>Anana Agwu Ezikpe &copy; 2023</p>
             <p><a href="site-plan.html">Site Plan</a></p> 
-            </p>
-            <div class="social"></div>
+            <div class="social">
                 <a href="https://www.linkedin.com/in/anana-ezikpe-02010591/" target="_blank">
                     <img src="images/linkin.png" alt="linkedin-icon">
                 </a>
@@ -69,7 +70,7 @@
                     <img src="images/facebook.png" alt="facebook icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">"
+                    <img src="images/twitter.png" alt="twitter icon">
 
                 </a>
             </div>
