--- a/personal-site/aboutme.html
+++ b/personal-site/aboutme.html
@@ -21,7 +21,7 @@
         </header>
     
         <main class="about-grid">
-            <div>
+            <div id="fill">
                 <img class="about-img" src="images/fabianimage3.jpg" alt="my image">
             </div>
             
