--- a/personal-site/blog.html
+++ b/personal-site/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anana Agwu Ezikpe </title>
+    <link rel="stylesheet" type="text/css" href="portstyles/beststyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oswald:wght@300&display=swap">
 </head>
 <body>
@@ -23,28 +24,28 @@
             <div>
                 <img class="about-img" src="images/fabianimage4.jpg" alt="my image">
             </div>
-            <h1 class="blog-box">BLOG CATEGORIES</h1>
             <section class="intro">
+                <h1 class="blog-box">BLOG CATEGORIES</h1>
                 <h2 class="intro-box">This page contains my Hobbies/interest and updates on my activities and future events.</section>
-            <section class="hobbies">
-                <h1 class="hobbies-box">HOBBIES</h1>
-                <h2 class="hobbies-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
+            <section class="intro">
+                <h1 class="blog-box">HOBBIES</h1>
+                <h2 class="intro-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
                     boys and a girl (my parent included). 
                 </h2>
             </section>
             <section class="reading">
-                <h1 class="reading-box">READING</h1>
-                <h2 class="reading-box">Adventure, legal, and special-ops novels are my favorites.            
+                <h1 class="blog-box">READING</h1>
+                <h2 class="intro-box">Adventure, legal, and special-ops novels are my favorites.            
                 </h2>
             </section>
-            <section class="exercises">
-                <h1 class="exercises">EXERCISES</h1>
-                <h2 class="exercises">Aerobics, push-ups, jogging, dumbells, weight lifting are my favorite exercises.            
+            <section class="exercise">
+                <h1 class="blog-box">EXERCISES</h1>
+                <h2 class="intro-box">Aerobics, push-ups, jogging, dumbells, weight lifting are my favorite exercises.            
                 </h2>
             </section>
             <section class="games">
-                <h1 class="games-box">VIDEO GAMES</h1>
-                <h2 class="games-box">Soccer remains my favorite video games. Also like adventure games like God of war, <br>
+                <h1 class="blog-box">VIDEO GAMES</h1>
+                <h2 class="intro-box">Soccer remains my favorite video games. Also like adventure games like God of war, <br>
                     Ghost of Tsushima, and action games like Call of Duty.            
                 </h2>
             </section>
