--- a/personal-site/blog.html
+++ b/personal-site/blog.html
@@ -26,7 +26,8 @@
             </div>
             <section class="intro">
                 <h1 class="blog-box">BLOG CATEGORIES</h1>
-                <h2 class="intro-box">This page contains my Hobbies/interest and updates on my activities and future events.</section>
+                <h2 class="intro-box">This page contains my Hobbies/interest and updates on my activities and future events.</h2>
+            </section>
             <section class="intro">
                 <h1 class="blog-box">HOBBIES</h1>
                 <h2 class="intro-box">My name is Anana Agwu Ezikpe. I am from Cross River State in Nigeria. I was born into a family of seven, with four <br>
@@ -53,8 +54,7 @@
         <footer>
             <p>Anana Agwu Ezikpe &copy; 2023</p>
             <p><a href="site-plan.html">Site Plan</a></p> 
-            </p>
-            <div class="social"></div>
+            <div class="social">
                 <a href="https://www.linkedin.com/in/anana-ezikpe-02010591/" target="_blank">
                     <img src="images/linkin.png" alt="linkedin-icon">
                 </a>
