--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -27,8 +27,8 @@
         </header>
     
         <main class="main-grid">
-            <div id="main-id">
-                <img class="main-img" src="images/fabianimage.jpg" alt="my image">
+            <div>
+                <img class="about-img" src="images/fabianimage.jpg" alt="my image">
             </div>
             
             <section class="intro">
